<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Progress Items -->
    <string name="retrieving">The calendar is loading new events.
	    \nThis may take a few seconds.</string>

    <!-- Menu items -->
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>

    <!-- NetworkActivity -->
    <string name="page_title">Oak Ridge High School News</string>
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi reconnected.</string>
    <string name="desc">some description.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>
    <string name="app_name">SCAN ()Alpha)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cal">CalActivity</string>
    <string name="title_more_activity">MoreActivity</string>
    <string name="Calendar">Calendar</string>
    <string name="NewsFeed">News Feed</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="colorButton">Press for selected colors</string>
    <string name="title_activity_year">Year</string>
    <string name="ORHS_Motto">The mission of Oak Ridge High School is to provide a purposeful teaching and learning environment which challenges our students to achieve academic, artistic, personal and civic excellence.</string>
    <string name="YearView">Event View</string>
    <string name="More">More\.\.\.</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_net">NetActivity</string>
    <string name="netAgreement">\tThe Governing Board believes that academic honesty and personal integrity are fundamental components of a student\'s education and character development.  The Board expects that students will not cheat, lie, plagiarize, knowingly allow others to copy your work, or commit other acts of academic dishonesty.\n\n\tStudents, parents/guardians, staff, and administrators shall be responsible for creating and maintianing a positive school climate that encouragfes honesty. Students found to have committed an act of academic dishonesty shall be subject to district and school-site rules which includes failing the assignment and receiving progressive discipline consequences.</string>
    <string name="Agreement_Text">Press to sign agreement.</string>
    <string name="TBI">To Be Implemented</string>
    <string name="Attention">Attention:</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="StudentRightsTitle">Student Rights:</string>
    <string name="StudentRightsBody">Blurb</string>
    <string name="title_activity_authetication_error">Authentication Error</string>
    <string name="NewsURL">http://feeds.feedburner.com/blogspot/PaqBy?format=xml</string>
    <string name="title_activity_list_events">ListEventsActivity</string>
    <string name="retry">Resign</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Ellume_Copywrite">\u00A9 2014 Ellume Softworks</string>

    <!-- Settings Activity -->
    <string name="Themes">Themes</string>
    <string name="Themes_Default_Value">The Blues</string>
    <string name="VisualSettings">Appearance</string>
    <string name="VisualSettingsSummary">Change the appearance of various elements in the calendar.</string>
    <string name="Currently_Selected_Theme">com.ellume.SCAN.CURRENTLY_SELECTED_THEME</string>
    <string name="title_activity_list_themes">ListThemesActivity</string>
    <string name="Edit_Themes">Edit Themes</string>
    <string name="Add_Theme">Add Theme</string>
    <string name="title_activity_add_theme_name_dialog">AddThemeNameDialog</string>
    <string name="Theme_Name">Theme Name: </string>
    <string name="title_activity_theme_editor">ThemeEditorActivity</string>
    <string name="title_activity_cal_list">CalListActivity</string>

</resources>
