<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#c8c8dc"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/trojanGuy"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:src="@drawable/orhs_drawable"
        android:layout_weight="7"
        android:onClick="smileyCounter" />
	<TextView
	    android:layout_width="match_parent"
	    android:gravity="center"
	    android:textSize="18sp"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:text="@string/ORHS_Motto"
	    android:textColor="@color/White"/>
    <Button
        android:id="@+id/Calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toCalendar"
        android:text="@string/Calendar"
        android:background="@color/Dark_Blue"
        android:textColor="@color/White"
        android:clickable="true" 
         />

    <Button
        android:id="@+id/newsfeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toNewsFeed"
        android:text="@string/NewsFeed"
        android:background="@color/Dark_Blue"
        android:textColor="@color/White"
        android:clickable="true"
        />

    <Button
        android:id="@+id/yearview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toYearView"
        android:text="@string/YearView" 
        android:background="@color/Dark_Blue"
        android:textColor="@color/White"
        android:clickable="true"
        />

</LinearLayout>