<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orhs_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ellume.SCAN.NetActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:text="@string/Attention"
        android:textColor="@color/White"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/InternetClause"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/netToggleButton"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/netAgreement"
        android:textColor="@color/White"
        android:textSize="14sp" />

    <Button
        android:id="@+id/netToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:onClick="netSigned"
        android:text="@string/Agreement_Text"
        android:textColor="@color/White"
        android:textSize="20sp" />

    <Button
        android:id="@+id/netToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:onClick="netSigned"
        android:text="@string/Agreement_Text"
        android:textColor="@color/White"
        android:textSize="20sp" />

</RelativeLayout>